--- a/part_09/patientor/frontend/package.json
+++ b/part_09/patientor/frontend/package.json
@@ -9,7 +9,8 @@
     "react-dom": "^16.14.0",
     "react-router-dom": "^5.2.0",
     "semantic-ui-css": "^2.4.1",
-    "semantic-ui-react": "^0.88.2"
+    "semantic-ui-react": "^0.88.2",
+    "yup": "^0.32.8"
   },
   "devDependencies": {
     "@types/axios": "^0.14.0",
@@ -18,11 +19,11 @@
     "@types/react": "^16.14.3",
     "@types/react-dom": "16.9.3",
     "@types/react-router-dom": "^5.1.7",
-    "@typescript-eslint/eslint-plugin": "^2.34.0",
-    "@typescript-eslint/parser": "^2.34.0",
+    "@typescript-eslint/eslint-plugin": "^4.15.0",
+    "@typescript-eslint/parser": "^4.15.0",
     "eslint-config-react": "^1.1.7",
     "react-scripts": "^4.0.2",
-    "typescript": "^3.9.8"
+    "typescript": "^4.1.5"
   },
   "scripts": {
     "start": "react-scripts start",
