--- a/part_09/patientor/frontend/package.json
+++ b/part_09/patientor/frontend/package.json
@@ -19,6 +19,7 @@
     "@types/react": "^16.14.3",
     "@types/react-dom": "16.9.3",
     "@types/react-router-dom": "^5.1.7",
+    "@types/yup": "^0.29.11",
     "@typescript-eslint/eslint-plugin": "^4.15.0",
     "@typescript-eslint/parser": "^4.15.0",
     "eslint-config-react": "^1.1.7",
