--- a/part_09/patientor/frontend/package.json
+++ b/part_09/patientor/frontend/package.json
@@ -8,6 +8,7 @@
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
     "react-router-dom": "^5.2.0",
+    "react-semantic-ui-datepickers": "^2.13.0",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^0.88.2",
     "yup": "^0.32.8"
