--- a/part_09/patientor/frontend/package.json
+++ b/part_09/patientor/frontend/package.json
@@ -6,6 +6,7 @@
     "axios": "^0.21.1",
     "formik": "^2.2.6",
     "react": "^16.14.0",
+    "react-datepicker": "^3.4.1",
     "react-dom": "^16.14.0",
     "react-router-dom": "^5.2.0",
     "semantic-ui-css": "^2.4.1",
@@ -17,6 +18,7 @@
     "@types/jest": "24.0.19",
     "@types/node": "12.11.7",
     "@types/react": "^16.14.3",
+    "@types/react-datepicker": "^3.1.3",
     "@types/react-dom": "16.9.3",
     "@types/react-router-dom": "^5.1.7",
     "@types/yup": "^0.29.11",
