--- a/part_09/patientor/backend/package.json
+++ b/part_09/patientor/backend/package.json
@@ -4,19 +4,24 @@
   "description": "Backend for Patientor project",
   "main": "index.js",
   "scripts": {
-    "tsc": "tsc",
-    "dev": "ts-node-dev ./src/index.ts",
-    "lint": "eslint --ext .ts .",
-    "start": "node build/src/index.js"
+    "tsc": "cross-env NODE_ENV=production tsc",
+    "dev": "cross-env NODE_ENV=development ts-node-dev ./src/index.ts",
+    "start": "cross-env NODE_ENV=production node build/src/index.js",
+    "lint": "eslint --ext .ts ."
   },
   "author": "Tue-Minh Dinh Vo",
   "license": "MIT",
   "devDependencies": {
     "@types/cors": "^2.8.9",
+    "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.11",
+    "@types/mongoose": "^5.10.3",
+    "@types/mongoose-unique-validator": "^1.0.4",
     "@types/uuid": "^8.3.0",
     "@typescript-eslint/eslint-plugin": "^4.15.0",
     "@typescript-eslint/parser": "^4.15.0",
+    "cross-env": "^7.0.3",
+    "dotenv": "^8.2.0",
     "eslint": "^7.19.0",
     "ts-node-dev": "^1.1.1",
     "typescript": "^4.1.4"
@@ -24,6 +29,8 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "mongoose": "^5.11.15",
+    "mongoose-unique-validator": "^2.0.3",
     "uuid": "^8.3.2"
   }
 }
