--- a/part_09/patientor/backend/package.json
+++ b/part_09/patientor/backend/package.json
@@ -4,10 +4,11 @@
   "description": "Backend for Patientor project",
   "main": "index.js",
   "scripts": {
-    "tsc": "cross-env NODE_ENV=production tsc",
+    "build": "tsc",
     "dev": "cross-env NODE_ENV=development ts-node-dev ./src/index.ts",
-    "start": "cross-env NODE_ENV=production node build/src/index.js",
-    "lint": "eslint --ext .ts ."
+    "start": "node build/src/index.js",
+    "lint": "eslint --ext .ts .",
+    "postinstall": "npm run build"
   },
   "author": "Tue-Minh Dinh Vo",
   "license": "MIT",
